k8-workloads/deployment-hello-aff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      greeting: hello
  replicas: 3
  template:
    metadata:
      labels:
        greeting: hello
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud.google.com/gke-nodepool
                operator: In
                values:
                - pool-3      
      containers:
      - name: hello-world
        image: "gcr.io/google-samples/hello-app:2.0"
      - name: hello-kubernetes
        image: "gcr.io/google-samples/node-hello:1.0"
